# piecewise-inverse-transform-sampling

./: .gitignore  README.md  accuracy_benchmark.py  accuracy_results.csv  ars.py  benchmark_results.csv  main.py  main_ars.py  main_exp.py  main_gaussian.py  performance_benchmark.py  pyproject.toml  test.py
context/: sampler_context.py
distributions/: exponential.py  gaussian.py
experiments/: accuracy_benchmark.py  performance_benchmark.py
samplers/: ars.py  its_alias.py  its_equiprob.py  its_linear.py
samplers/ars/: ars.py
samplers/its/: its.py
samplers/its/strategies/: alias_method.py  equiprob.py
strategies/: alias_method.py  base.py  equispaced.py  linear_search.py
utils/: alias_table.py  benchmark_utils.py  cdf_utils.py  distributions_utils.py
