[project]
name = "piecewise-inverse-transform-sampling"
version = "0.1.0"
description = ""
authors = [
    {name = "mattiamarilli",email = "mattiamarilli@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib (>=3.10.8,<4.0.0)",
    "scipy (>=1.17.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
